@@ -1,3 +1,8 @@
+2016-04-02 Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/mat.c Matlab V4 files are also rotated.
+        * PerlMagick/t/input_gray_lsb_double_V4.mat   Demo Matlab V4 file.
+
 2016-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/magick.c (GetMagickInfo): Only declare that ExceptionInfo
